# BayesRays3DGS

./: README.md  main.pai.yaml  pyproject.toml
bayessplatting/dataparsers/sparse/: sparse_nerfstudio_config.py  sparse_nerfstudio_dataparser.py
bayessplatting/gsplat/: README.md  __init__.py  rasterize.py  rendering.py  utils.py
bayessplatting/gsplat/cuda/: __init__.py  _backend.py  (+1 more)
bayessplatting/metrics/: ause.py  image_metrics.py
bayessplatting/scripts/: eval_uncertainty.py  output_uncertainty.py  render_uncertainty.py  uncertainty.py
bayessplatting/utils/: scale_solver.py  utils.py
evaluations/: africa-eval-nerf.csv  africa-eval-nerf.json  africa-eval-no-sfm.csv  africa-eval-no-sfm.json  africa-eval.json  basket-eval-nerf.csv  basket-eval-nerf.json  basket-eval-no-sfm.csv  basket-eval.csv  basket-eval.json  scene-001-eval-nerf.csv  scene-001-eval-nerf.json  scene-001-eval-no-sfm.csv  scene-001-eval-no-sfm.json  scene-001-eval.csv  scene-001-eval.json  scene-079-eval-nerf.csv  scene-079-eval-nerf.json  scene-079-eval-no-sfm.csv  scene-079-eval-no-sfm.json  scene-079-eval.csv  scene-079-eval.json  scene-11-traj1-eval-nerf.csv  scene-11-traj1-eval-nerf.json  scene-11-traj1-eval-no-sfm.csv  scene-11-traj1-eval-no-sfm.json  scene-11-traj1-eval.csv  scene-11-traj1-eval.json  scene-158-eval-nerf.csv  scene-158-eval-nerf.json  scene-158-eval-no-sfm.csv  scene-158-eval-no-sfm.json  scene-158-eval.csv  scene-158-eval.json  scene-316-eval-nerf.csv  scene-316-eval-nerf.json  scene-316-eval-no-sfm.csv  scene-316-eval-no-sfm.json  scene-316-eval.csv  scene-316-eval.json  (+31 more)
(+14 files in other folders)
