[project]
name = "bayessplatting"
version = "0.1"

dependencies = [
    "nerfstudio==1.1.0",
    "gsplat>=0.1.11,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["bayessplatting*"]

[project.scripts]
ns-uncertainty = "bayessplatting.scripts.uncertainty:entrypoint"
ns-viewer-ubs = "bayessplatting.scripts.viewer.run_viewer_uncertainty_gs:entrypoint"